added nose arguments

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,5 @@
-[nosetests]
-verbosity=1
+[nose2]
+plugins = nose2.plugins.coverage
+coverage = 1
+coverage-report = term
 
-[coverage:report]
-show_missing = True
-
-[flake8]
-per-file-ignores =
-    */__init__.py: F401 E402
-
-[pylint.'MESSAGES CONTROL']
-disable=E1101
